--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^5.2.1",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.1.12",
